--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="drawer_Series">Series</string>
     <string name="drawer_settings">Settings</string>
     <string name="ab_search">Search</string>
+    <string name="release_date">Release Date:</string>
 </resources>
