--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="drawer_settings">Settings</string>
     <string name="ab_search">Search</string>
     <string name="release_date">Release Date:</string>
+    <string name="srch">Search</string>
 </resources>
